Alteração do Program para conexão com banco

--- a/DesafioResidencia/appsettings.json
+++ b/DesafioResidencia/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LAPTOP-81B2K3K5\\SQLEXPRESS;Initial Catalog=DESAFIO;Integrated Security=False;User ID=sa;Password=Asl@123;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=RAFAEL;Initial Catalog=DESAFIO;Integrated Security=False;User ID=sa;Password=1234;TrustServerCertificate=True;"
   },  
   "Logging": {
     "LogLevel": {
